--- a/iosApp/iosApp/Localizable.xcstrings
+++ b/iosApp/iosApp/Localizable.xcstrings
@@ -32,7 +32,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "\"para comprobar si has acertado.\""
+            "value" : "para comprobar si has acertado."
           }
         }
       }
@@ -197,7 +197,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ejemplos de grupo"
+            "value" : "Ejemplos de grupo:"
           }
         }
       }
@@ -488,13 +488,13 @@
         }
       }
     },
-    "stats_played" : {
+    "stats_played %d" : {
       "extractionState" : "manual",
       "localizations" : {
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Jugados de %1$s"
+            "value" : "Jugados de %d"
           }
         }
       }
